--- a/index.html
+++ b/index.html
@@ -217,10 +217,10 @@
   </style>
   <script>
   let links = [
-    'https://www.profitablecpmrate.com/p8du1ppfux?key=2a15a0c31dbd17d4d1e27d7122eda8be', // Dito ilalagay Direct Link
-    'https://www.profitablecpmrate.com/k6wx77nigq?key=563ee2bf3c48588185fb939bfc5c8a66', // Dito ilalagay Direct Link
-    'https://www.profitablecpmrate.com/w2fxwttd?key=ac3cbdfae9b83203393fe00469043beb', // Dito ilalagay Direct Link
-    'https://www.profitablecpmrate.com/u4mpxkdm?key=03c78149be8d994cee4975386cdc1138' // Dito ilalagay Direct Link
+    'https://www.profitablecpmrate.com/fn47ijxft?key=a092e6af00126fee3b4f65dde30b7386', // Dito ilalagay Direct Link
+    'https://www.profitablecpmrate.com/enn5eitttv?key=a28dbf99fd7b8c45b5dc75476bd0ff4d', // Dito ilalagay Direct Link
+    'https://www.profitablecpmrate.com/uvb1p3y1a?key=4ad5156a8825b1efeca8efee96b033d0', // Dito ilalagay Direct Link
+    'https://www.profitablecpmrate.com/mnyv8fk2?key=66cb42bea215c0e793e6bbcfba9cb3a3' // Dito ilalagay Direct Link
   ];
     let currentIndex = 0;
     let autoNavigateInterval;
